--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,42 +1,48 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'com.android.application'
+apply from: "$rootDir/shared.gradle"
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdk 32
 
     defaultConfig {
-        applicationId "com.spoton.kdsarchitecturesample"
-        minSdk 21
-        targetSdk 32
+        applicationId ApplicationId.packageName
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
 dependencies {
+    //UI
+    implementation "androidx.appcompat:appcompat:${Versions.appcompat}"
+    implementation "androidx.fragment:fragment:${Versions.fragment}"
+    implementation "androidx.fragment:fragment-ktx:${Versions.fragment}"
+    implementation "androidx.activity:activity:${Versions.activity}"
+    implementation "androidx.activity:activity-ktx:${Versions.activity}"
+    implementation "androidx.constraintlayout:constraintlayout:${Versions.constraintLayout}"
+    implementation "com.google.android.material:material:${Versions.materialComponents}"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:${Versions.navigation}"
+    implementation "androidx.navigation:navigation-ui-ktx:${Versions.navigation}"
+
+    //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${Versions.lifecycle}"
+    implementation "androidx.lifecycle:lifecycle-common-java8:${Versions.lifecycle}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${Versions.lifecycleExtensions}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.lifecycle}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.lifecycle}"
+
+    // Kotlin test
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+
+    //database
+    implementation "androidx.room:room-runtime:${Versions.room}"
+    implementation "androidx.room:room-ktx:${Versions.room}"
+    kapt "androidx.room:room-compiler:${Versions.room}"
+    androidTestImplementation "androidx.room:room-testing:${Versions.room}"
+
+    //Dependency Injection
+    implementation "com.google.dagger:hilt-android:${Versions.hilt}"
+    kapt "com.google.dagger:hilt-compiler:${Versions.hilt}"
 }
