--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,36 +13,24 @@ android {
 }
 
 dependencies {
-    //UI
-    implementation "androidx.appcompat:appcompat:${Versions.appcompat}"
-    implementation "androidx.fragment:fragment:${Versions.fragment}"
-    implementation "androidx.fragment:fragment-ktx:${Versions.fragment}"
-    implementation "androidx.activity:activity:${Versions.activity}"
-    implementation "androidx.activity:activity-ktx:${Versions.activity}"
-    implementation "androidx.constraintlayout:constraintlayout:${Versions.constraintLayout}"
-    implementation "com.google.android.material:material:${Versions.materialComponents}"
-
-    //Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:${Versions.navigation}"
-    implementation "androidx.navigation:navigation-ui-ktx:${Versions.navigation}"
-
-    //Lifecycle
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:${Versions.lifecycle}"
-    implementation "androidx.lifecycle:lifecycle-common-java8:${Versions.lifecycle}"
-    implementation "androidx.lifecycle:lifecycle-extensions:${Versions.lifecycleExtensions}"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.lifecycle}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.lifecycle}"
-
-    // Kotlin test
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
-
-    //database
-    implementation "androidx.room:room-runtime:${Versions.room}"
-    implementation "androidx.room:room-ktx:${Versions.room}"
-    kapt "androidx.room:room-compiler:${Versions.room}"
-    androidTestImplementation "androidx.room:room-testing:${Versions.room}"
+    //Sample
+    implementation project(":sample-data")
+    implementation project(":sample-domain")
+    implementation project(":sample-presentation")
 
     //Dependency Injection
     implementation "com.google.dagger:hilt-android:${Versions.hilt}"
     kapt "com.google.dagger:hilt-compiler:${Versions.hilt}"
+
+    //mockito
+    testImplementation "org.mockito.kotlin:mockito-kotlin:${Versions.mockitoKotlin}"
+
+    //junit
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${Versions.junit5}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${Versions.junit5}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${Versions.junit5}"
+    testImplementation "androidx.test:core:${Versions.runner}"
+
+    // Kotlin test
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
