--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "KdsArchitectureSample"
 include ':app'
+include ':sample-presentation'
+include ':sample-domain'
+include ':sample-data'
