--- a/sample-data/build.gradle
+++ b/sample-data/build.gradle
@@ -11,6 +11,7 @@ android {
 
 dependencies {
     implementation project(":sample-domain")
+    implementation project(":common")
 
     //Dependency Injection
     implementation "com.google.dagger:hilt-android:${Versions.hilt}"
