--- a/sample-domain/build.gradle
+++ b/sample-domain/build.gradle
@@ -10,6 +10,8 @@ android {
 }
 
 dependencies {
+    implementation project(":common")
+
     //Dependency Injection
     implementation "com.google.dagger:hilt-android:${Versions.hilt}"
     kapt "com.google.dagger:hilt-compiler:${Versions.hilt}"
